--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ div{
     font-size: larger;
 
 }
+.pfp{
+    border: 10px solid #1d3c45;
+    border-radius: 50%;
+    display: inline;
+    }
+.pfp:hover{
+    border-color: grey;
+    transition: 1s;
+}
+
 .topbox{
     background-color: #1d3c45;
     color: #fff1e1;
@@ -18,7 +28,7 @@ div{
 }
 /* body tag  */
 body{
-    background-color:#4c6bbf;
+    background-color:#293148;
     background-size: 100% 100%;
     color: rgb(42, 41, 41);
     
